--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SwiftMK</string>
+
+    <string name="icon_home">&#xe98d;</string>
+    <string name="icon_more">&#xe98c;</string>
+    <string name="icon_mine">&#xe99e;</string>
 </resources>
