--- a/underlayk/src/main/res/values/strings.xml
+++ b/underlayk/src/main/res/values/strings.xml
@@ -1,1 +1,4 @@
-<resources></resources>
+<resources>
+    <string name="logk_view_provider_title">OpenPanel</string>
+    <string name="logk_view_provider_close">close</string>
+</resources>
