--- a/underlayk/src/main/res/values/strings.xml
+++ b/underlayk/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="logk_view_provider_title">OpenPanel</string>
-    <string name="logk_view_provider_close">Close</string>
+    <string name="logk_view_provider_title_open">OpenPanel</string>
+    <string name="logk_view_provider_title_close">ClosePanel</string>
 </resources>
