--- a/abilityk/src/main/res/values/strings.xml
+++ b/abilityk/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="accessibility_service_description">智能安装服务:程序正在更新中...</string>
+    <string name="installk_smart_accessibility_service_description">应用自动安装服务</string>
+    <string name="installk_label">InstallK程序更新</string>
 </resources>
