--- a/componentktest/src/main/res/values/strings.xml
+++ b/componentktest/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">componentktest</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="install_label">ComponentKTest程序更新</string>
+
 </resources>
