--- a/uicorek/src/main/res/values/strings.xml
+++ b/uicorek/src/main/res/values/strings.xml
@@ -7,15 +7,15 @@
     <!--recyclerk-->
     <string name="recyclerk_load_footer_loading">正在加载…</string>
     <!--popwink-->
-    <string name="basepopup_error_non_act_context">找不到宿主Activity，请确保您至少打开了一个Activity</string>
-    <string name="basepopup_error_thread">请在主线程操作</string>
-    <string name="basepopup_error_destroyed">该BasePopup已经被Destroy，无法继续执行show</string>
-    <string name="basepopup_error_decorview">PopupWindow需要%s的DecorView的WindowToken，请检查是否存在DecorView</string>
-    <string name="basepopup_window_not_prepare">%s窗口尚未准备好，等待准备就绪后弹出</string>
-    <string name="basepopup_window_prepared">%s窗口已经准备好，执行弹出</string>
-    <string name="basepopup_has_been_shown">BasePopup已经显示了</string>
-    <string name="basepopup_shown_successful">弹窗成功</string>
-    <string name="basepopup_host">宿主（%s）</string>
-    <string name="basepopup_host_destroyed">宿主已经被销毁</string>
+    <string name="base_popwink_error_non_act_context">找不到宿主Activity，请确保您至少打开了一个Activity</string>
+    <string name="base_popwink_error_thread">请在主线程操作</string>
+    <string name="base_popwink_error_destroyed">该BasePopup已经被Destroy，无法继续执行show</string>
+    <string name="base_popwink_error_decorview">PopupWindow需要%s的DecorView的WindowToken，请检查是否存在DecorView</string>
+    <string name="base_popwink_window_not_prepare">%s窗口尚未准备好，等待准备就绪后弹出</string>
+    <string name="base_popwink_window_prepared">%s窗口已经准备好，执行弹出</string>
+    <string name="base_popwink_has_been_shown">BasePopup已经显示了</string>
+    <string name="base_popwink_shown_successful">弹窗成功</string>
+    <string name="base_popwink_host">宿主（%s）</string>
+    <string name="base_popwink_host_destroyed">宿主已经被销毁</string>
 
 </resources>
